<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="terras1" Id="{750ecb5b-71e7-485d-9061-f9af2fc8bc1e}">
    <Declaration><![CDATA[TYPE terras1 EXTENDS Kamers :
STRUCT
watersproeier : BOOL;	

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>